--- a/less/global.less
+++ b/less/global.less
@@ -44,4 +44,10 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+
+  @media @phone {
+    max-width: 450px;
+    width: 100%;
+    margin: 0 auto;
+  }
 }
